--- a/composer.json
+++ b/composer.json
@@ -8,14 +8,14 @@
         "php": "^8.2",
         "phpunit/phpunit": "^12.1"
     }
-    ,
+,
     "require-dev": {
         "roave/security-advisories": "dev-latest"
     },
     "license": "MIT",
     "autoload": {
         "psr-4": {
-            "App\\": "src/"
+            "App\\": "src/Classes/"
         }
     },
     "autoload-dev": {
