--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,8 @@
     "prefer-stable": true,
     "require": {
         "php": "^8.2",
-        "phpunit/phpunit": "^12.1"
+        "phpunit/phpunit": "^12.1",
+        "ext-ctype": "*"
     }
 ,
     "require-dev": {
